--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Time-Series-to-COVID-19-in-USA/*.python linguist-detectable=true
+https://github.com/Vini28498/Time-Series-to-COVID-19-in-USA/*.python linguist-detectable=true
