--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-$ cat .gitattributes
-https://github.com/Vini28498/Time-Series-to-COVID-19-in-USA/.jupyter linguist-language=Python
+https://github.com/Vini28498/Time-Series-to-COVID-19-in-USA/* linguist-vendored
